--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "readable-lists-site",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "Website to display mailing lists in a readable format",
-  "keywords": [],
+  "host": "readable-email.org",
   "dependencies": {
-    "express": "~4.5.0",
-    "jquery": "~2.1.1",
-    "twbs": "0.0.6",
-    "jade": "~1.3.1",
+    "body-parser": "~1.4.3",
     "browserify-middleware": "~3.0.0",
-    "less-file": "0.0.8",
-    "keyboard": "0.0.1",
-    "moment": "~2.7.0",
-    "marked": "~0.3.2",
+    "class-list": "~0.1.1",
+    "cookie-session": "~1.0.2",
+    "express": "~4.5.0",
     "highlight.js": "~8.0.0",
+    "jade": "~1.3.1",
+    "jquery": "~2.1.1",
+    "keyboard": "0.0.1",
+    "less-file": "0.0.8",
+    "lusca": "~1.0.1",
+    "marked": "~0.3.2",
+    "moment": "~2.7.0",
     "ms": "~0.6.2",
     "passport": "~0.2.0",
     "passport-github": "~0.1.5",
-    "then-request": "0.0.4",
     "promise": "~5.0.0",
-    "body-parser": "~1.4.3",
-    "cookie-session": "~1.0.2",
+    "readable-lists-api": "0.0.4",
+    "serve-favicon": "^2.0.1",
     "stripe": "~2.7.3",
-    "class-list": "~0.1.1"
+    "then-request": "0.0.4",
+    "twbs": "0.0.6"
   },
   "devDependencies": {
     "mocha": "*"
