--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "cookie-session": "~1.0.2",
     "express": "~4.5.0",
     "highlight.js": "~8.0.0",
-    "jade": "~1.3.1",
+    "jade": "^1.6.0",
     "jquery": "~2.1.1",
     "keyboard": "0.0.1",
+    "knox": "^0.9.1",
     "less-file": "0.0.8",
     "lusca": "~1.0.1",
     "marked": "~0.3.2",
+    "merge": "^1.2.0",
     "moment": "~2.7.0",
     "ms": "~0.6.2",
     "passport": "~0.2.0",
