--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "readable-lists-site",
+  "name": "readable-email-site",
   "version": "0.1.2",
   "description": "Website to display mailing lists in a readable format",
   "host": "readable-email.org",
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ForbesLindesay/readable-lists-site.git"
+    "url": "https://github.com/readable-email/readable-email-site.git"
   },
   "author": "ForbesLindesay",
   "license": "MIT",
