--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browserify-middleware": "~3.0.0",
     "class-list": "~0.1.1",
     "cookie-session": "~1.0.2",
+    "dotenv": "^4.0.0",
     "express": "~4.5.0",
     "highlight.js": "~8.0.0",
     "jade": "^1.6.0",
@@ -22,7 +23,7 @@
     "ms": "~0.7.1",
     "passport": "~0.2.0",
     "passport-github": "~0.1.5",
-    "promise": "~5.0.0",
+    "promise": "^7.1.1",
     "readable-lists-api": "0.0.8",
     "serve-favicon": "^2.0.1",
     "stripe": "~2.7.3",
