Update jquery and moment

--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "express": "~4.5.0",
     "highlight.js": "~8.0.0",
     "jade": "^1.6.0",
-    "jquery": "~2.1.1",
+    "jquery": "^3.3.1",
     "keyboard": "0.0.1",
     "knox": "^0.9.1",
     "less-file": "0.0.8",
     "lusca": "~1.0.1",
     "marked": "~0.3.5",
     "merge": "^1.2.0",
-    "moment": "~2.12.0",
+    "moment": "^2.22.2",
     "ms": "~0.7.1",
     "passport": "~0.2.0",
     "passport-github": "~0.1.5",
