--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "twbs": "0.0.6"
   },
   "devDependencies": {
-    "mocha": "*"
+    "jskube": "^1.1.3",
+    "mocha": "*",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "test": "mocha -R spec",
@@ -44,6 +47,6 @@
   "author": "ForbesLindesay",
   "license": "MIT",
   "engines": {
-    "node": "10.3.0"
+    "node": "12.18.2"
   }
 }
