chore: deploy prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ workflows:
           requires:
             - staging-approval
 
+      - deploy-production:
+          <<: *not_master
+
   release:
     jobs:
       - deploy-staging:
