--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ workflows:
 
       - deploy-production:
           <<: *not_master
+          requires:
+            - deploy-staging
 
   release:
     jobs:
